--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,20 @@
   <groupId>Algorithms</groupId>
   <artifactId>Algorithms</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
   <dependencies>
-  	  	<dependency>
+    
+  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
   	</dependency>
+  	
+  	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.0</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
